# swarm-stacks

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.portainer.local.yaml  docker-compose.portainer.yaml  docker-compose.traefik.local.yaml  docker-compose.traefik.yaml  docker-compose.whoami.local.yaml  docker-compose.whoami.yaml  init.py  pyproject.toml
postgres/: .env  Makefile  docker-compose.postgres.yml
src/swarm_stacks/: __init__.py  lib.py  portainer.py  postgres.py
src/swarm_stacks/templates/: portainer.jinja2  postgres.jinja2
tests/: conftest.py
traefik/: dynamic.yml
